# nagios-plugins

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  CHANGELOG.md  CODING  FAQ  LEGAL  Makefile.am  NEWS  NP-VERSION-GEN  NPTest.pm  README  REQUIREMENTS  ROADMAP  SUPPORT  THANKS.in  autogen.sh  configure.ac  configure.in  nagios-plugins.spec.in
build-aux/: ltmain.sh
debian/: changelog  control  rules
doc/: LEAVERS  NEW_STARTERS  RELEASING  developer-guidelines.sgml
gl/: Makefile.am  Makefile.am~  arpa_inet.in.h  dirname.h  dosname.h~  error.h  fd-hook.h  float+.h~  fsusage.c  fsusage.h  full-read.c  full-read.h  gai_strerror.c  getaddrinfo.c  getopt.c  getopt_int.h~  gettext.h  human.c  human.h  idpriv-droptemp.c  idpriv.h  idpriv.h~  inet_ntop.c  intprops.h  localcharset.h~  malloca.h  mountlist.c  mountlist.h  mountlist.h~  msvc-inval.h~  msvc-nothrow.h~  netdb.in.h  netinet_in.in.h  printf-args.h~  printf-parse.h~  regex.h  regex_internal.h  regexec.c  sha1.h~  sockets.h  (+11 more)
lib/: Makefile.am  extra_opts.c  extra_opts.h  parse_ini.c  parse_ini.h  utils_base.c  utils_base.h  utils_cmd.c  utils_cmd.h  utils_disk.c  utils_disk.h  utils_tcp.c
m4/: ax_with_python.m4  np_mysqlclient.m4
plugins-python/: Makefile.am  check_heartbleed.in  check_imap_login.in  check_ncpa.in
plugins-root/: Makefile.am  check_dhcp.c  check_icmp.c  pst3.c
plugins-scripts/: Makefile.am  check_disk_smb.pl  check_docker_container.sh  check_file_age.pl  check_flexlm.pl  check_ifoperstatus.pl  check_ifstatus.pl  check_ircd.pl  check_log.sh  check_mailq.pl  check_mssql.pl  check_ntp.pl  (+7 more)
(+118 files in other folders)
